--- a/Frontend/VoucherManagementApp/src/admin/admin/admin.component.html
+++ b/Frontend/VoucherManagementApp/src/admin/admin/admin.component.html
@@ -1,4 +1,20 @@
- 
+ <br>
+ <div class="container col-lg-6">
+    <h1 class="text-center">Select Vouchers for assigning to Mobile</h1>
+    <div class="card">
+      <div class="card-body">
+        <form class="form-group">
+            <div class="alert alert-success" *ngIf='addSuccess'>{{successMessage}}</div>
+          <div class="form-group">
+            <label>Mobile Number :</label>
+            <input type="text" class="form-control" id="mobile" [(ngModel)]='mobile' placeholder="Enter Mobile Number"
+              name="mobile">
+          </div> 
+          <button (click)=getNumber() class="btn btn-success">Verify</button>
+        </form>
+      </div>
+    </div>
+  </div>
 <div class="container" style="margin-top: 70px;">
   <table class="table table-hover">
     <thead>
@@ -13,7 +29,13 @@
     </thead>
     <tbody>
       <tr *ngFor="let admin of admins">
-        <td><input type="checkbox" [value]="admin.voucherId"  /></td>
+        <td>
+          <div class="input-group-addon">
+              <button class="btn btn-primary" (click)="addVoucher(admin.voucherId, $event)">
+                <span class="glyphicon glyphicon-plus">+</span> 
+              </button>
+          </div>
+        </td>
         <td>{{ admin.voucherId }}</td>
         <td> {{ admin.faceValue }}</td>
         <td> {{ admin.startDate }}</td>
